<resources>
    <string name="app_name">Stock</string>
    <string name="stock">주식</string>
    <string name="bookmark">찜한 주식</string>
    <string name="news">뉴스</string>
    <string name="profile">내 정보</string>
    <string name="ranking">랭킹</string>
    <string name="title_activity_book_mark_screen">BookMarkScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>